--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "@tailwindcss/vite": "^4.0.6",
+    "astro": "^5.2.5",
+    "tailwindcss": "^4.0.6"
+  },
+  "devDependencies": {
+    "astro-compress": "^2.3.6",
+    "cssnano": "^7.0.6",
+    "postcss-preset-env": "^10.1.3",
+    "terser": "^5.38.1"
   }
 }
